--- a/style.css
+++ b/style.css
@@ -3,11 +3,51 @@
   justify-content: center;
 }
 
+.title h3 {
+  font-size: 45px;
+  margin: 10px 0;
+}
+
 .algo-container {
   display: flex;
   flex-direction: row;
 }
 
+.algo-options {
+  padding: 0 20px 20px 20px;
+  border: 2px solid black;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  text-align: center;
+  margin-left: 20px;
+  margin-bottom: 20px;
+}
+
+.algo-options p {
+  margin: 0;
+  margin-bottom: 15px;
+}
+
 .spacing {
   width: 40px;
+}
+
+.options-list {
+  display: flex;
+  flex-direction: column;
+  padding-left: 0;
+}
+
+.options-list li {
+  display: flex;
+  flex-direction: column;
+}
+
+.options-list input {
+  height: 10px
+}
+
+.function-buttons {
+  margin-left: 20px;
 }
