--- a/style.css
+++ b/style.css
@@ -51,3 +51,13 @@
 .function-buttons {
   margin-left: 20px;
 }
+
+.sort-bars {
+  display: flex;
+  flex-direction: row;
+  transform: rotate(180deg) scaleX(-1);
+}
+
+.barIndiv {
+  background-color: red;
+}
